--- a/scss/components/contact/_location.scss
+++ b/scss/components/contact/_location.scss
@@ -355,7 +355,7 @@
                 margin-top: 17px;
                 letter-spacing: 0.5px;
                 padding: 12px 23px;
-                color: $white;
+                color: $black;
                 margin: auto;
 
                 @media(min-width:768px){
