--- a/scss/components/distibutor/_distributor.scss
+++ b/scss/components/distibutor/_distributor.scss
@@ -74,11 +74,11 @@
                     grid-template-columns: repeat(2, 1fr);
                     margin: 0 0 0 auto;
                     width: 100%;
-                    height: 570px;
+                    height: 400px;
                 }
 
                 @media(min-width: 1700px){
-                    height: 800px;
+                    height: 550px;
                 }
     
             }
@@ -121,7 +121,6 @@
             color: $white;
             text-align: center;
             font-weight: bold;
-            
 
             @media(min-width: 1199px){
                 font-size: 24px;
@@ -141,7 +140,7 @@
             font-weight: 800;
             letter-spacing: 0.5px;
             padding: 12px 23px;
-            color: $white;
+            color: $black;
             width: 100%;
             margin:30px auto 0 auto;
 
