--- a/scss/components/home/_promotion.scss
+++ b/scss/components/home/_promotion.scss
@@ -60,7 +60,7 @@
         margin-top: 17px;
         letter-spacing: 0.5px;
         padding: 12px 23px;
-        color: $white;
+        color: $black;
 
         @media(min-width:768px){
             font-size: 20px;
