--- a/scss/components/services/_benefit.scss
+++ b/scss/components/services/_benefit.scss
@@ -9,6 +9,10 @@
     background-attachment: fixed;
     padding: 30px 0;
 
+    @media(min-width:1199px){
+        padding: 50px 0;
+    }
+
     .container-sm{
         @include flex-center-center;
         flex-direction: column;
@@ -34,11 +38,9 @@
         color: $mikado_yellow;
         text-shadow: 2px 2px 5px black;
         text-align: center;
-        margin: 30px 0;
 
         @media(min-width:1199px){
             font-size: 30px;
-            margin: 40px 0;
         }
 
     }
@@ -113,7 +115,7 @@
         font-weight: 800;
         letter-spacing: 0.5px;
         padding: 12px 23px;
-        color: $white;
+        color: $black;
 
         @media(min-width:768px){
             font-size: 20px;
