--- a/scss/components/us/_goal.scss
+++ b/scss/components/us/_goal.scss
@@ -66,7 +66,7 @@
             font-weight: 800;
             letter-spacing: 0.5px;
             padding: 12px 23px;
-            color: $white;
+            color: $black;
     
             @media(min-width:768px){
                 font-size: 20px;
