--- a/scss/components/home/_reduces_costs.scss
+++ b/scss/components/home/_reduces_costs.scss
@@ -48,7 +48,7 @@
             padding: 20px;
 
             &__icon{
-                width: 100px;
+                width: 100%;
             }
 
             p{
