--- a/css/main.css
+++ b/css/main.css
@@ -646,7 +646,7 @@
       flex-direction: column;
       padding: 20px; }
       .reduce_costs__grid__item__icon {
-        width: 100%; }
+        width: 100px; }
       .reduce_costs__grid__item p {
         padding-top: 10px;
         font-size: 17px;
