--- a/scss/components/home/_hero.scss
+++ b/scss/components/home/_hero.scss
@@ -50,7 +50,7 @@
         &--one{
             width: 100%;
             height: 100%;
-            background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('../img/home/Banner.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('../img/home/Banner.webp');
             background-position:center;
             background-size:cover;
             background-repeat: no-repeat;
@@ -134,7 +134,7 @@
         &--two{
             width: 100%;
             height: 100%;
-            background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('../img/home/Hotel.jpg');
+            background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)),url('../img/home/Hotel.webp');
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
