--- a/scss/components/home/_promotion.scss
+++ b/scss/components/home/_promotion.scss
@@ -2,7 +2,7 @@
     width: 100%;
 	position: relative;
     overflow: hidden;
-    background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.9)), url("../img/home/para3.jpg");
+    background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.9)), url("../img/home/para3.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
