--- a/scss/components/us/_situation.scss
+++ b/scss/components/us/_situation.scss
@@ -3,7 +3,7 @@
     width: 100%;
 	overflow: hidden;
 	position: relative;
-    background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.9)), url("../img/us/banfin.jpg");
+    background-image:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.9)), url("../img/us/banfin.webp");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
