--- a/scss/components/gallery/_catalog.scss
+++ b/scss/components/gallery/_catalog.scss
@@ -3,7 +3,7 @@
 	overflow: hidden;
 	position: relative;
 	height: 100%;
-    background-image: url('../img/gallery/Bangal.jpg');
+    background-image: url('../img/gallery/bangal.webp');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
