--- a/css/main.css
+++ b/css/main.css
@@ -1574,7 +1574,7 @@
   overflow: hidden;
   position: relative;
   height: 500px;
-  background-image: url("../img/services/serviban2.jpg");
+  background-image: url("../img/services/serviban2.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat; }
@@ -1886,7 +1886,7 @@
   width: 100%;
   position: relative;
   height: 100%;
-  background-image: url("../img/services/banbeneficios.jpg");
+  background-image: url("../img/services/banbeneficios.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
