--- a/scss/components/services/_benefit.scss
+++ b/scss/components/services/_benefit.scss
@@ -2,7 +2,7 @@
     width: 100%;
 	position: relative;
 	height: 100%;
-    background-image: url('../img/services/banbeneficios.jpg');
+    background-image: url('../img/services/banbeneficios.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
