--- a/scss/components/products/_instalation.scss
+++ b/scss/components/products/_instalation.scss
@@ -18,7 +18,7 @@
             width: 100%;
             @include flex-center-center;
             flex-direction: column;
-            background-image: url('../img/products/ban_gale.jpg');
+            background-image: url('../img/products/ban_gale.webp');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
