--- a/scss/components/distibutor/_start_win.scss
+++ b/scss/components/distibutor/_start_win.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 400px;
     position: relative;
-    background-image: url('../img/distributor/parallax-final.jpg');
+    background-image: url('../img/distributor/parallax-final.webp');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
