--- a/scss/components/contact/_location.scss
+++ b/scss/components/contact/_location.scss
@@ -4,7 +4,7 @@
 	overflow: hidden;
 	position: relative;
     padding: 30px 0;
-    background-image: url('../img/contact/ban-contactanos.jpg');
+    background-image: url('../img/contact/ban-contactanos.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
