--- a/css/main.css
+++ b/css/main.css
@@ -2458,7 +2458,7 @@
   overflow: hidden;
   position: relative;
   height: 500px;
-  background-image: url("../img/contact/banner-contact.jpg");
+  background-image: url("../img/contact/banner-contact.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat; }
@@ -2511,7 +2511,7 @@
   overflow: hidden;
   position: relative;
   padding: 30px 0;
-  background-image: url("../img/contact/ban-contactanos.jpg");
+  background-image: url("../img/contact/ban-contactanos.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat; }
