--- a/scss/components/contact/_hero.scss
+++ b/scss/components/contact/_hero.scss
@@ -4,7 +4,7 @@
 	overflow: hidden;
 	position: relative;
 	height: 500px;
-    background-image: url('../img/contact/banner-contact.jpg');
+    background-image: url('../img/contact/banner-contact.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
